--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <span class="hamburger-line"></span>
         </button>
         <nav class="navbar">
-            <a href="/" class="hover">Home</a>
-            <a href="/products" class="">Products</a>
-            <a href="/about" class="">About</a>
-            <a href="/contact" class="navlink">Contact</a>
+            <a href="/KhatiKhaw" class="hover">Home</a>
+            <a href="products" class="">Products</a>
+            <a href="about" class="">About</a>
+            <a href="contact" class="navlink">Contact</a>
         </nav>
     </header>
 
