--- a/products/index.html
+++ b/products/index.html
@@ -11,17 +11,17 @@
 <body>
     
     <header class="header">
-        <a href="/" class="logo">Khati Khow</a>
+        <a href="/KhatiKhaw" class="logo">Khati Khow</a>
         <button class="hamburger" aria-label="Menu">
             <span class="hamburger-line"></span>
             <span class="hamburger-line"></span>
             <span class="hamburger-line"></span>
         </button>
         <nav class="navbar">
-            <a href="/" class="">Home</a>
-            <a href="/products" class="hover">Products</a>
-            <a href="/about" class="">About</a>
-            <a href="/contact" class="navlink">Contact</a>
+            <a href="/KhatiKhaw" class="">Home</a>
+            <a href="products" class="hover">Products</a>
+            <a href="about" class="">About</a>
+            <a href="contact" class="navlink">Contact</a>
         </nav>
     </header>
     
@@ -35,7 +35,7 @@
                 <div class="text-box">
                     <h3>This is our Best Product - Ghee</h1>
                     <p>Experience the richness of pure ghee.</p>
-                    <a href="/products/3/Premium-Ghee/" class="btn"><button>Buy Now!</button></a>
+                    <a href="products/3/Premium-Ghee/" class="btn"><button>Buy Now!</button></a>
                 </div>
             </div>
             <div class="media-icons">
