--- a/contact/index.html
+++ b/contact/index.html
@@ -13,17 +13,17 @@
     <!-- NavBar Of the Website -->
 
     <header class="header">
-        <a href="/" class="logo">Khati Khow</a>
+        <a href="/KhatiKhaw/" class="logo">Khati Khow</a>
         <button class="hamburger" aria-label="Menu">
             <span class="hamburger-line"></span>
             <span class="hamburger-line"></span>
             <span class="hamburger-line"></span>
         </button>
         <nav class="navbar">
-            <a href="/" class="">Home</a>
-            <a href="/products" class="">Products</a>
-            <a href="/about" class="">About</a>
-            <a href="/contact" class="hover">Contact</a>
+            <a href="/KhatiKhaw/" class="">Home</a>
+            <a href="/KhatiKhaw/products" class="">Products</a>
+            <a href="/KhatiKhaw/about" class="">About</a>
+            <a href="/KhatiKhaw/contact" class="hover">Contact</a>
         </nav>
     </header>
 
@@ -37,7 +37,7 @@
                 <div class="text-box">
                     <h3>View</h1>
                     <p>Experience the richness of pure ghee.</p>
-                    <a href="/products" class="btn"><button>Explore Our Products</button></a>
+                    <a href="/KhatiKhaw/products" class="btn"><button>Explore Our Products</button></a>
                 </div>
             </div>
             <div class="media-icons">
@@ -77,13 +77,13 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <a href="/" class="logo">Khati Khow</a>
+                    <a href="/KhatiKhaw/" class="logo">Khati Khow</a>
                 </div>
                 <div class="footer-links">
                     <a href="/" class="footer-link">Home</a>
-                    <a href="/products" class="footer-link">Products</a>
-                    <a href="/about" class="footer-link">About</a>
-                    <a href="/contact" class="footer-link">Contact</a>
+                    <a href="/KhatiKhaw/products" class="footer-link">Products</a>
+                    <a href="/KhatiKhaw/about" class="footer-link">About</a>
+                    <a href="/KhatiKhaw/contact" class="footer-link">Contact</a>
                 </div>
             </div>
             <p class="footer-info">© 2024 Khati Khow. All rights reserved.</p>
