--- a/about/index.html
+++ b/about/index.html
@@ -12,17 +12,17 @@
     <!-- NavBar Of the Website -->
 
     <header class="header">
-        <a href="/" class="logo">Khati Khow</a>
+        <a href="/KhatiKhaw/" class="logo">Khati Khow</a>
         <button class="hamburger" aria-label="Menu">
             <span class="hamburger-line"></span>
             <span class="hamburger-line"></span>
             <span class="hamburger-line"></span>
         </button>
         <nav class="navbar">
-            <a href="/" class="">Home</a>
-            <a href="/products" class="">Products</a>
-            <a href="/about" class="hover">About</a>
-            <a href="/contact" class="navlink">Contact</a>
+            <a href="/KhatiKhaw/" class="">Home</a>
+            <a href="/KhatiKhaw/products" class="">Products</a>
+            <a href="/KhatiKhaw/about" class="hover">About</a>
+            <a href="/KhatiKhaw/contact" class="navlink">Contact</a>
         </nav>
     </header>
     
@@ -36,7 +36,7 @@
                 <div class="text-box">
                     <h3>Welcome to Khati Khow</h1>
                     <p>Experience the richness of pure ghee.</p>
-                    <a href="/products" class="btn"><button>Explore Our Products</button></a>
+                    <a href="/KhatiKhaw/products" class="btn"><button>Explore Our Products</button></a>
                 </div>
             </div>
             <div class="media-icons">
@@ -85,10 +85,10 @@
                     <a href="/" class="logo">Khati Khow</a>
                 </div>
                 <div class="footer-links">
-                    <a href="/" class="footer-link">Home</a>
-                    <a href="/products" class="footer-link">Products</a>
-                    <a href="/about" class="footer-link">About</a>
-                    <a href="/contact" class="footer-link">Contact</a>
+                    <a href="/KhatiKhaw/" class="footer-link">Home</a>
+                    <a href="/KhatiKhaw/products" class="footer-link">Products</a>
+                    <a href="/KhatiKhaw/about" class="footer-link">About</a>
+                    <a href="/KhatiKhaw/contact" class="footer-link">Contact</a>
                 </div>
             </div>
             <p class="footer-info">© 2024 Khati Khow. All rights reserved.</p>
