--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <!-- NavBar Of the Website -->
 
     <header class="header">
-        <a href="/" class="logo">Khati Khow</a>
+        <a href="/KhatiKhaw/" class="logo">Khati Khow</a>
         <button class="hamburger" aria-label="Menu">
             <span class="hamburger-line"></span>
             <span class="hamburger-line"></span>
             <span class="hamburger-line"></span>
         </button>
         <nav class="navbar">
-            <a href="/KhatiKhaw" class="hover">Home</a>
-            <a href="products" class="">Products</a>
-            <a href="about" class="">About</a>
-            <a href="contact" class="navlink">Contact</a>
+            <a href="/KhatiKhaw/" class="hover">Home</a>
+            <a href="/KhatiKhaw/products" class="">Products</a>
+            <a href="/KhatiKhaw/about" class="">About</a>
+            <a href="/KhatiKhaw/contact" class="navlink">Contact</a>
         </nav>
     </header>
 
