--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="text-box">
                     <h3>Welcome to Khati Khow</h1>
                     <p>Experience the richness of pure ghee.</p>
-                    <a href="/products" class="btn"><button>Explore Our Products</button></a>
+                    <a href="/KhatiKhaw/products" class="btn"><button>Explore Our Products</button></a>
                 </div>
             </div>
             <div class="media-icons">
